--- a/package.json
+++ b/package.json
@@ -13,16 +13,18 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^6.0.0",
-    "@types/bcryptjs": "^2.4.6",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^2.5.1",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "express-fileupload": "^1.5.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
+    "@types/bcryptjs": "^2.4.6",
     "@types/express": "^5.0.0",
+    "@types/express-fileupload": "^1.5.1",
     "@types/node": "^22.10.1",
     "eslint": "^9.15.0",
     "globals": "^15.12.0",
